# shaat

./: Cargo.toml  LICENSE  README.md
libmessages/: Cargo.toml
libmessages/src/: btree.rs  btree2.rs  lib.rs
libstatic/: Cargo.toml
libstatic/src/: lib.rs  node.rs
main/: Cargo.toml  run.bash
main/src/: main.rs  messajes.rs  statiq.rs
main/src/auth/: cookies.rs  mod.rs
main/src/db/: mod.rs  models.rs  schema.rs
main/src/graphql/: mod.rs  schema.rs
main/src/users/: mod.rs
main/src/ws/: chat_server.rs  mod.rs  session.rs
static/: color.js  index.html  login.html  login.js  main.css  main.js  ws.js
